Closed Bug 1859227 Opened 2 years ago Closed 2 years ago

ogg_framing.c:51:3: error: unknown type name ‘ogg_uint64_t’; did you mean ‘ogg_int64_t’?

Categories

(Core :: Audio/Video: Playback, defect)

defect

Tracking

()

RESOLVED FIXED
120 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox118 --- unaffected
firefox119 --- unaffected
firefox120 --- fixed

People

(Reporter: petr.sumbera, Assigned: cpeterson)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Steps to reproduce:

Build on Solaris failed with:

18:25.91 In file included from Unified_c_media_libogg0.c:20:
18:25.91 /builds/psumbera/mozilla-central-build/media/libogg/src/ogg_framing.c: In function ‘ogg_page_granulepos’:
18:25.91 /builds/psumbera/mozilla-central-build/media/libogg/src/ogg_framing.c:51:3: error: unknown type name ‘ogg_uint64_t’; did you mean ‘ogg_int64_t’?
18:25.91    51 |   ogg_uint64_t granulepos=page[13]&(0xff);
18:25.91       |   ^~~~~~~~~~~~
18:25.91       |   ogg_int64_t

The first bad revision is:
changeset: 681857:2e57d70e96de
user: Chris Peterson <cpeterson@mozilla.com>
date: Fri Oct 13 22:13:32 2023 -0700
description:
Bug 1857843 - Update libogg to v1.3.5. r=media-playback-reviewers,padenot

Keywords: regression
Regressed by: 1857843

The Bugbug bot thinks this bug should belong to the 'Core::Audio/Video: Playback' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Audio/Video: Playback
Product: Firefox → Core

:cpeterson, since you are the author of the regressor, bug 1857843, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

Flags: needinfo?(cpeterson)

I don't have a Solaris machine to test. I could add a typedef for ogg_uint64_t to our in-tree solaris-type.patch, but I suspect we could actually just remove that patch and fall back to the typedefs in ogg/config_types.h.

@ Petr, can you please test if deleting the following code block in os_types.h fixes the Solaris build?

https://searchfox.org/mozilla-central/rev/ecb14e26e11a8edd3e7110f38b3803969db618ec/media/libogg/include/ogg/os_types.h#102-111

Otherwise, I can define ogg_uint64_t here:

  1. https://searchfox.org/mozilla-central/rev/ecb14e26e11a8edd3e7110f38b3803969db618ec/media/libogg/solaris-types.patch#17
  2. https://searchfox.org/mozilla-central/rev/ecb14e26e11a8edd3e7110f38b3803969db618ec/media/libogg/include/ogg/os_types.h#110
Assignee: nobody → cpeterson
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Flags: needinfo?(cpeterson) → needinfo?(petr.sumbera)

(In reply to Chris Peterson [:cpeterson] from comment #3)

@ Petr, can you please test if deleting the following code block in os_types.h fixes the Solaris build?

yes, I can confirm that after deleting it, it builds fine.

Flags: needinfo?(petr.sumbera)

Thanks for testing! That's good news. I'll submit a fix to remove our unnecessary solaris-types.patch and fix the build.

Compiling ogg on Solaris no longer requires solaris-types.patch because
the ogg typedefs defined using std int types in os_types.h are adequate.

Pushed by cpeterson@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/37c8ab9f4c4b Remove obsolete ogg solaris-types.patch to fix Solaris build. r=media-playback-reviewers,padenot
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 120 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: