Bug 1859227 - Remove obsolete ogg solaris-types.patch to fix Solaris build. r=media-playback-reviewers,padenot

Compiling ogg on Solaris no longer requires solaris-types.patch because
the ogg typedefs defined using std int types in os_types.h are adequate.

Differential Revision: https://phabricator.services.mozilla.com/D191265