media/libogg/include/ogg/os_types.h
@@ -99,16 +99,6 @@ extern ogg_free_function_type *ogg_free_func;
    typedef int64_t ogg_int64_t;
    typedef u_int64_t ogg_uint64_t;
 
-#elif defined(__sun__)
-
-   /* Solaris and derivatives */
-#  include <inttypes.h>
-   typedef int16_t ogg_int16_t;
-   typedef uint16_t ogg_uint16_t;
-   typedef int32_t ogg_int32_t;
-   typedef uint32_t ogg_uint32_t;
-   typedef int64_t ogg_int64_t;
-
 #elif defined(__HAIKU__)
 
   /* Haiku */
